--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,13 @@
       <artifactId>json-path</artifactId>
       <version>5.3.2</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+<dependency>
+    <groupId>org.apache.httpcomponents</groupId>
+    <artifactId>httpclient</artifactId>
+    <version>4.5.3</version>
+</dependency>
+
 <dependency>
       <groupId>io.rest-assured</groupId>
       <artifactId>xml-path</artifactId>
